@@ -145,7 +145,7 @@ values from C values.
 
 \begin{cfuncdesc}{PyObject*}{PyImport_AddModule}{char *name}
   Return the module object corresponding to a module name.  The
-  \var{name} argument may be of the form \code{package.module}).
+  \var{name} argument may be of the form \code{package.module}.
   First check the modules dictionary if there's one there, and if not,
   create a new one and insert it in the modules dictionary.
   Return \NULL{} with an exception set on failure.
@@ -675,12 +675,25 @@ return false and raise an appropriate exception.
   failure, it returns false and raises the appropriate exception.
 \end{cfuncdesc}
 
+\begin{cfuncdesc}{int}{PyArg_VaParse}{PyObject *args, char *format,
+                                         va_list vargs}
+  Identical to \cfunction{PyArg_ParseTuple()}, except that it accepts a
+  va_list rather than a variable number of arguments.
+\end{cfuncdesc}
+
 \begin{cfuncdesc}{int}{PyArg_ParseTupleAndKeywords}{PyObject *args,
                        PyObject *kw, char *format, char *keywords[],
                        \moreargs}
   Parse the parameters of a function that takes both positional and
   keyword parameters into local variables.  Returns true on success;
   on failure, it returns false and raises the appropriate exception.
+\end{cfuncdesc}
+
+\begin{cfuncdesc}{int}{PyArg_VaParseTupleAndKeywords}{PyObject *args,
+                       PyObject *kw, char *format, char *keywords[],
+                       va_list vargs}
+  Identical to \cfunction{PyArg_ParseTupleAndKeywords()}, except that it
+  accepts a va_list rather than a variable number of arguments.
 \end{cfuncdesc}
 
 \begin{cfuncdesc}{int}{PyArg_Parse}{PyObject *args, char *format,
