@@ -17,6 +17,8 @@ PyAPI_FUNC(int) PyArg_UnpackTuple(PyObject *, char *, int, int, ...);
 PyAPI_FUNC(PyObject *) Py_BuildValue(char *, ...);
 
 PyAPI_FUNC(int) PyArg_VaParse(PyObject *, char *, va_list);
+PyAPI_FUNC(int) PyArg_VaParseTupleAndKeywords(PyObject *, PyObject *,
+                                                  char *, char **, va_list);
 PyAPI_FUNC(PyObject *) Py_VaBuildValue(char *, va_list);
 
 PyAPI_FUNC(int) PyModule_AddObject(PyObject *, char *, PyObject *);
